modules/basic-terraform-lab/main.tf
resource "aws_subnet" "kali-subnet" {
  vpc_id                  = var.vpc_id
  cidr_block              = "172.16.${var.attendee_number}.0/24"
  availability_zone       = "us-west-1a"
  map_public_ip_on_launch = true

  tags = {
    Name = "Basic-Terraform-Lab-subnet-${var.attendee_number}"
  }
}

resource "aws_route_table_association" "kali-subnet" {
  subnet_id      = aws_subnet.kali-subnet.id
  route_table_id = var.route_table_id
}

# SECURITY GROUP #
resource "aws_security_group" "kali-sg" {
  name   = "Basic-Terraform_Lab-sg-${var.attendee_number}"
  vpc_id = var.vpc_id

  ingress {
    from_port  = 22
    to_port    = 22
    protocol   = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port  = 3389
    to_port    = 3389
    protocol   = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port  = 3390
    to_port    = 3390
    protocol   = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Either from 8 + to -1 or from -1 + to -1
  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = [aws_subnet.kali-subnet.cidr_block]
  }

  egress {
    from_port  = 0
    to_port    = 0
    protocol   = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_instance" "winser22-vm" {
  ami           = var.winser22_ami
  instance_type = var.instance_type
  subnet_id     = aws_subnet.kali-subnet.id
  
  vpc_security_group_ids = [aws_security_group.kali-sg.id]

  user_data = var.winser22_setup_script

  key_name = "terraform-key-pair"

  tags = {
    Name = "WinSer22-VM-${var.attendee_number}"
  }
}
